# non-operating-system

./: .gitignore  Makefile  README.md
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: cfg_table_type.rs  frame_buffer.rs  gop.rs  identity_acpi_handler.rs  kernel_args.rs  main.rs  os_mem.rs
gpt-tool/: BOOTx64.efi  Makefile  qemu.sh
gpt-tool/include/: fat32.h
gpt-tool/src/: fat32.c  gpt.c  main  main.c  utils.c
image/: BOOTx64.efi
include/: fat32.h  gpt_constants.h  structures.h  utils.h
os/: Cargo.toml
src/: Makefile  fat32.c  fat32.h  gpt.c  gpt.h  gpt_constants.h  main  main.c  mbr.c  mbr.h  structures.h  test.img  utils.h  write_gpt  write_gpt.c
